--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Memory Card Game</title>
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">    
   <link href="style.css" rel="stylesheet" type="text/css">
+  
 </head>
 <body>
-	<header>
+	<header class='jumbotron'>
 		<h1>Memory Game</h1>
 	</header>
 
-	<nav>
-		<a href="#">Instructions</a>
-		<a href="#">Game</a>
+	<nav class="navbar navbar-fixed-top">
+		<ul class='nav nav-pills'>
+			<li class='nav-item'>
+				<a class='nav-link active' data-toggle='tab' href="#instructions">Instructions</a>
+			</li>
+			<li class='nav-item'>
+				<a class='nav-link' data-toggle='tab' href="#game">Game</a>
+			</li>
+		</nav>
 	</nav>
 
-	<main>
-		<h2>Instructions</h2>
-		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso, or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-		
-		<div id="score">Score: </div>
-		<button id = reset>Reset</button>
-		
-		<div id="game-board" class="board clearfix"></div>
+	
 
-    </main>
+	<div class='tab-content'>
 
-    <footer class="clearfix">
+		<div class='tab-pane active' role='tabpanel' id='instructions'>
+			<p class='text-justify'>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso, or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+		</div>
+
+		<div class='tab-pane' role='tabpanel' id='game'>
+			<button class='btn btn-primary' id='reset'>Reset</button>
+			<div class="score">Score: <span class='score' id='score'></span></div>
+			<div id="game-board" class="board clearfix"></div>
+		</div>
+
+    </div>
+
+	<footer class='footer'>
     	<p class="copyright">Copyright 2017</p>
-    	<p class="message">Created with &hearts; by <span class="name">GA</span></p>
-    </footer>
+    	<p class="message">Created with &hearts; at <span class="name">GA</span></p>
+	</footer>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
